--- a/cx.html
+++ b/cx.html
@@ -1245,7 +1245,7 @@ function main() {
     title="NimCxError = object of Exception
   cxerrormsg: string"><wbr />Nim<wbr />Cx<wbr />Error<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#Benchmarkres"
-    title="Benchmarkres = tuple[bname, cpu, epoch, repeats: string, fastest: float]"><wbr />Benchmarkres<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="Benchmarkres = tuple[bname, cpu, epoch, repeats: string]"><wbr />Benchmarkres<span class="attachedType" style="visibility:hidden"></span></a></li>
 
   </ul>
 </li>
@@ -1347,6 +1347,16 @@ function main() {
     title="handler()"><wbr />handler<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#doCxEnd,"
     title="doCxEnd()"><wbr />do<wbr />Cx<wbr />End<span class="attachedType" style="visibility:hidden"></span></a></li>
+
+  </ul>
+</li>
+<li>
+  <a class="reference reference-toplevel" href="#16" id="66">Converters</a>
+  <ul class="simple simple-toc-section">
+      <li><a class="reference" href="#toInt.c,char"
+    title="toInt(x: char): int"><wbr />to<wbr />Int<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#toChar.c,int"
+    title="toChar(x: int): char"><wbr />to<wbr />Char<span class="attachedType" style="visibility:hidden"></span></a></li>
 
   </ul>
 </li>
@@ -1490,7 +1500,7 @@ Funding     : Here are three excellent reasons :
               
               You are in any other state ==&gt; send BTC to : 194KWgEcRXHGW5YzH1nGqN75WbfzTs92Xk</pre>
 <p>newColor</p>
-<p>creates a new color string from r,g,b values passed in colors can be used as foregroundcolor in print,printLn routines and as bgr in cxPrint,cxPrintLn .. code-block:: nim import nimcx printLn(&quot;Test for rgb color 12345  &quot; &amp; efb2 * 10,newColor(27354,4763,1089)) decho(2) printLn(&quot;Test for rgb color 12345  &quot; &amp; efb2 * 10,newColor(73547,4873,4888)) decho(2) printLn(&quot;Test for rgb color 12345  &quot; &amp; efb2 * 10,newColor(990,483,38),bgblue) decho(2) cxPrintLn(&quot;Test cxprintln test 12345 &quot; &amp;  efb2 * 10,fontcolor = colBlue,bgr=newcolor(990,5483,38)) cxPrintLn(&quot;Test cxprintln test 12345 &quot; &amp;  efb2 * 10,fontcolor = colBlue,bgr=newcolor(9390,5483,38)) cxPrintLn(&quot;Test cxprintln test 12345 &quot; &amp;  efb2 * 10,fontcolor = colBlue,bgr=newcolor(93900,54830,3800)) decho(2) doFinish() </p>
+<p>creates a new color string from r,g,b values passed in colors can be used as foregroundcolor in print,printLn routines and as bgr in cxPrint,cxPrintLn .. code-block:: nim import nimcx printLn(&quot;Test for rgb color 12345  &quot; &amp; efb2 * 10,newColor(27354,4763,1089)) decho(2) printLn(&quot;Test for rgb color 12345  &quot; &amp; efb2 * 10,newColor(73547,4873,4888)) decho(2) printLn(&quot;Test for rgb color 12345  &quot; &amp; efb2 * 10,newColor(990,483,38),bgblue) decho(2) cxPrintLn(&quot;Test cxprintln test 12345 &quot; &amp;  efb2 * 10,fontcolor = colBlue,bgr=newcolor(990,5483,38)) cxPrintLn(&quot;Test cxprintln test 12345 &quot; &amp;  efb2 * 10,fontcolor = colBlue,bgr=newcolor(9390,5483,38)) cxPrintLn(&quot;Test cxprintln test 12345 &quot; &amp;  efb2 * 10,fontcolor = colBlue,bgr=newcolor(93900,54830,3800)) decho(2) # or save it let mymystiquecolor = newColor2(93547,84873,77888) printLn(&quot;Here we go&quot;,mymystiquecolor) doFinish() </p>
 <p>newColor2</p>
 <p>creates a new color string from r,g,b values passed in with styleReverse effect for text best used as foregroundcolor in print, printLn routines </p>
 </p>
@@ -1509,7 +1519,7 @@ Funding     : Here are three excellent reasons :
 
 
 </dd>
-<dt id="Benchmarkres"><a name="Benchmarkres"></a><pre><span class="Identifier">Benchmarkres</span> <span class="Other">=</span> <span class="Keyword">tuple</span><span class="Other">[</span><span class="Identifier">bname</span><span class="Other">,</span> <span class="Identifier">cpu</span><span class="Other">,</span> <span class="Identifier">epoch</span><span class="Other">,</span> <span class="Identifier">repeats</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">,</span> <span class="Identifier">fastest</span><span class="Other">:</span> <span class="Identifier">float</span><span class="Other">]</span></pre></dt>
+<dt id="Benchmarkres"><a name="Benchmarkres"></a><pre><span class="Identifier">Benchmarkres</span> <span class="Other">=</span> <span class="Keyword">tuple</span><span class="Other">[</span><span class="Identifier">bname</span><span class="Other">,</span> <span class="Identifier">cpu</span><span class="Other">,</span> <span class="Identifier">epoch</span><span class="Other">,</span> <span class="Identifier">repeats</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">]</span></pre></dt>
 <dd>
 
 
@@ -1591,7 +1601,7 @@ Funding     : Here are three excellent reasons :
 <dt id="checkColor"><a name="checkColor,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">checkColor</span><span class="Other">(</span><span class="Identifier">colname</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
 <dd>
 <p>checkColor</p>
-<p>returns true if colname is a known color name in colorNames string and </p>
+<p>returns true if colname is a known color name in colorNames constants.nim string and </p>
 
 
 </dd>
@@ -1870,6 +1880,21 @@ coltype examples : &quot;red&quot;,&quot;blue&quot;,&quot;medium&quot;,&quot;dar
 </dd>
 
 </dl></div>
+<div class="section" id="16">
+<h1><a class="toc-backref" href="#16">Converters</a></h1>
+<dl class="item">
+<dt id="toInt"><a name="toInt.c,char"></a><pre><span class="Keyword">converter</span> <span class="Identifier">toInt</span><span class="Other">(</span><span class="Identifier">x</span><span class="Other">:</span> <span class="Identifier">char</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="toChar"><a name="toChar.c,int"></a><pre><span class="Keyword">converter</span> <span class="Identifier">toChar</span><span class="Other">(</span><span class="Identifier">x</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">char</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
+<dd>
+
+
+</dd>
+
+</dl></div>
 <div class="section" id="18">
 <h1><a class="toc-backref" href="#18">Templates</a></h1>
 <dl class="item">
@@ -1999,7 +2024,7 @@ zipWith<pre class="listing"><span class="Keyword">var</span> <span class="Identi
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-04-14 15:33:18 UTC</small>
+        <small>Made with Nim. Generated: 2018-04-26 19:37:50 UTC</small>
       </div>
     </div>
   </div>
