--- a/cxglobal.html
+++ b/cxglobal.html
@@ -1284,7 +1284,9 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#newLine,int"
+      <li><a class="reference" href="#tupleTypes,"
+    title="tupleTypes(atuple: tuple): seq[string]"><wbr />tuple<wbr />Types<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#newLine,int"
     title="newLine(n: int = 1): string"><wbr />new<wbr />Line<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#cxtoLower,char"
     title="cxtoLower(c: char): char"><wbr />cxto<wbr />Lower<span class="attachedType" style="visibility:hidden"></span></a></li>
@@ -1361,7 +1363,7 @@ function main() {
   <li><a class="reference" href="#newCxlineText,"
     title="newCxlineText(): CxlineText"><wbr />new<wbr />Cxline<wbr />Text<span class="attachedType" style="visibility:hidden">CxlineText</span></a></li>
   <li><a class="reference" href="#newCxLine,"
-    title="newCxLine(): Cxline"><wbr />new<wbr />Cx<wbr />Line<span class="attachedType" style="visibility:hidden">Cxline</span></a></li>
+    title="newCxLine(): Cxline"><wbr />new<wbr />Cx<wbr />Line<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#fastsplit,string,char"
     title="fastsplit(s: string; sep: char): seq[string]"><wbr />fastsplit<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#splitty,string,string"
@@ -1395,8 +1397,12 @@ function main() {
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#cxpad,string,int,string"
     title="cxpad(s: string; padlen: int; paddy: string = spaces(1)): string"><wbr />cxpad<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#cxpdx,int,string,string"
+    title="cxpdx(padLen: int; s: string; paddy: string = spaces(1)): string"><wbr />cxpdx<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#cxlpad,string,int,string"
     title="cxlpad(s: string; padlen: int; paddy: string = spaces(1)): string"><wbr />cxlpad<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#cxlpdx,int,string,string"
+    title="cxlpdx(padLen: int; s: string; paddy: string = spaces(1)): string"><wbr />cxlpdx<span class="attachedType" style="visibility:hidden"></span></a></li>
 
   </ul>
 </li>
@@ -1473,6 +1479,8 @@ function main() {
     title="lowerCase(s: string): string"><wbr />lower<wbr />Case<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#currentLine.t,"
     title="currentLine()"><wbr />current<wbr />Line<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#currentLine.t,int"
+    title="currentLine(xpos: int)"><wbr />current<wbr />Line<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#hdx.t,typed,string,int,int"
     title="hdx(code: typed; frm: string = &quot;+&quot;; width: int = tw; nxpos: int = 0): typed"><wbr />hdx<span class="attachedType" style="visibility:hidden"></span></a></li>
 
@@ -1493,7 +1501,7 @@ Status      : stable
 
 License     : MIT opensource
 
-Latest      : 2018-04-14
+Latest      : 2018-04-15
 
 Compiler    : Nim &gt;= 0.18.x dev branch
 
@@ -1528,7 +1536,7 @@ Description : provides many basic utility functions required by other modules</p
 
 
 </dd>
-<dt id="Cxline"><a name="Cxline"></a><pre><span class="Identifier">Cxline</span> <span class="Other">=</span> <span class="Keyword">object</span>
+<dt id="Cxline"><a name="Cxline"></a><pre><span class="Identifier">Cxline</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">inheritable</span></div><span class="Other pragmaend">.}</span> <span class="Other">=</span> <span class="Keyword">object</span>
   <span class="Identifier">startpos</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">int</span>
   <span class="Identifier">endpos</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">int</span>
   <span class="Identifier">toppos</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">int</span>
@@ -1562,6 +1570,13 @@ Description : provides many basic utility functions required by other modules</p
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
+<dt id="tupleTypes"><a name="tupleTypes,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">tupleTypes</span><span class="Other">(</span><span class="Identifier">atuple</span><span class="Other">:</span> <span class="Keyword">tuple</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">]</span></pre></dt>
+<dd>
+<p>tupletypes</p>
+<p>returns the field types of a tuple in a seq[string] </p>
+
+
+</dd>
 <dt id="newLine"><a name="newLine,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">newLine</span><span class="Other">(</span><span class="Identifier">n</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
 <dd>
 issues n newLines , default = 1
@@ -1724,7 +1739,7 @@ rndSample returns one rand sample from a sequence
 <dt id="ff22"><a name="ff22,int,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">ff22</span><span class="Other">(</span><span class="Identifier">zz</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">;</span> <span class="Identifier">n</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">0</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">AssertionError</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
 <dd>
 <p>ff22</p>
-<p>formats a integer into form 12,345,678 that is thousands separators are shown</p>
+<p>formats a integer into form 12,345,678 with thousands separators shown</p>
 <p>precision is after comma given by n with default set to 0 in context of integer this means display format could even show a 0 after comma part if needed</p>
 <p>ff2i(12345,0)  ==&gt; 12,345     # display an integer with thousands seperator as we know it ff2i(12345,1)  ==&gt; 12,345.0   # display an integer but like a float with 1 after comma pos ff2i(12345,2)  ==&gt; 12,345.00  # display an integer but like a float with 2 after comma pos</p>
 <pre class="listing"><span class="Keyword">import</span> <span class="Identifier">nimcx</span>
@@ -1783,7 +1798,7 @@ rndSample returns one rand sample from a sequence
 <p>default after comma positions is prec = 3 max</p>
 <p>form @[0.34,0.056,...] or similar</p>
 <pre class="listing"><span class="Comment"># create a seq with 50 rand floats</span>
-<span class="Identifier">echo</span> <span class="Identifier">createSeqFloat</span><span class="Punctuation">(</span><span class="DecNumber">50</span><span class="Punctuation">)</span></pre><pre class="listing"><span class="Comment"># create a seq with 50 rand floats formated</span>
+<span class="Identifier">echo</span> <span class="Identifier">createSeqFloat</span><span class="Punctuation">(</span><span class="DecNumber">50</span><span class="Punctuation">)</span></pre><pre class="listing"><span class="Comment"># create a seq with 50 rand floats formatted</span>
 <span class="Identifier">echo</span> <span class="Identifier">createSeqFloat</span><span class="Punctuation">(</span><span class="DecNumber">50</span><span class="Punctuation">,</span><span class="DecNumber">3</span><span class="Punctuation">)</span></pre>
 
 </dd>
@@ -1931,8 +1946,7 @@ doFlag<pre class="listing"><span class="Keyword">import</span> <span class="Iden
 <dt id="getAscii"><a name="getAscii,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">getAscii</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">int</span><span class="Other">]</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
 <dd>
 <p>getAsciicode</p>
-<p>returns ascii integer codes of every character in a string</p>
-<p>in an seq[int] </p>
+<p>returns a seq[int]  with ascii integer codes of every character in a string </p>
 
 
 </dd>
@@ -2033,11 +2047,26 @@ doFlag<pre class="listing"><span class="Keyword">import</span> <span class="Iden
 
 
 </dd>
+<dt id="cxpdx"><a name="cxpdx,int,string,string"></a><pre><span class="Keyword">func</span> <span class="Identifier">cxpdx</span><span class="Other">(</span><span class="Identifier">padLen</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">;</span> <span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">paddy</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">spaces</span><span class="Other">(</span><span class="DecNumber">1</span><span class="Other">)</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
+<dd>
+<p>pdx</p>
+<p>same as cxpad but with padding char count in front </p>
+
+
+</dd>
 <dt id="cxlpad"><a name="cxlpad,string,int,string"></a><pre><span class="Keyword">func</span> <span class="Identifier">cxlpad</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">padlen</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">;</span> <span class="Identifier">paddy</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">spaces</span><span class="Other">(</span><span class="DecNumber">1</span><span class="Other">)</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
     <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
 <dd>
 <p>cxlpad</p>
 <p>pads a string on the left side with spaces to specified width </p>
+
+
+</dd>
+<dt id="cxlpdx"><a name="cxlpdx,int,string,string"></a><pre><span class="Keyword">func</span> <span class="Identifier">cxlpdx</span><span class="Other">(</span><span class="Identifier">padLen</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">;</span> <span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">paddy</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">spaces</span><span class="Other">(</span><span class="DecNumber">1</span><span class="Other">)</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
+    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
+<dd>
+<p>cxlpdx</p>
+<p>same as cxpad but with padding char count in front </p>
 
 
 </dd>
@@ -2281,6 +2310,13 @@ returns a colorpalette which can be used to iterate over</pre>
 
 
 </dd>
+<dt id="currentLine"><a name="currentLine.t,int"></a><pre><span class="Keyword">template</span> <span class="Identifier">currentLine</span><span class="Other">(</span><span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">)</span></pre></dt>
+<dd>
+<p>currentLine</p>
+<p>simple template to return line number , maybe usefull for debugging </p>
+
+
+</dd>
 <dt id="hdx"><a name="hdx.t,typed,string,int,int"></a><pre><span class="Keyword">template</span> <span class="Identifier">hdx</span><span class="Other">(</span><span class="Identifier">code</span><span class="Other">:</span> <span class="Identifier">typed</span><span class="Other">;</span> <span class="Identifier">frm</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;+&quot;</span><span class="Other">;</span> <span class="Identifier">width</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="Identifier">tw</span><span class="Other">;</span> <span class="Identifier">nxpos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">0</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">typed</span></pre></dt>
 <dd>
 <p>hdx</p>
@@ -2299,7 +2335,7 @@ returns a colorpalette which can be used to iterate over</pre>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-04-14 15:33:22 UTC</small>
+        <small>Made with Nim. Generated: 2018-04-26 19:37:54 UTC</small>
       </div>
     </div>
   </div>
