--- a/cxglobal.html
+++ b/cxglobal.html
@@ -2087,7 +2087,7 @@ doFlag<pre class="listing"><span class="Keyword">import</span> <span class="Iden
 <dl class="item">
 <dt id="styledEchoPrint"><a name="styledEchoPrint.m,varargs[untyped]"></a><pre><span class="Keyword">macro</span> <span class="Identifier">styledEchoPrint</span><span class="Other">(</span><span class="Identifier">m</span><span class="Other">:</span> <span class="Identifier">varargs</span><span class="Other">[</span><span class="Identifier">untyped</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">typed</span></pre></dt>
 <dd>
-partially lifted from an earler macro in terminal.nim and removed new line currently used in print 
+partially lifted from an earler macro in terminal.nim and removed new line
 
 </dd>
 
@@ -2335,7 +2335,7 @@ returns a colorpalette which can be used to iterate over</pre>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-04-26 19:37:54 UTC</small>
+        <small>Made with Nim. Generated: 2018-05-01 19:53:01 UTC</small>
       </div>
     </div>
   </div>
