--- a/cxprint.html
+++ b/cxprint.html
@@ -1606,7 +1606,7 @@ required by printfont() , printBiCol2 and printLnBiCol2
 
 basically similar to terminal.nim styledWriteLine with more functionality
 
-fgr / bgr  fore and background colors can be set
+fgr foreground colors can be set
 
 xpos allows positioning on x-axis
 
@@ -2170,7 +2170,7 @@ forward declaration
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-04-26 19:38:02 UTC</small>
+        <small>Made with Nim. Generated: 2018-05-01 19:53:09 UTC</small>
       </div>
     </div>
   </div>
