--- a/cxglobal.html
+++ b/cxglobal.html
@@ -1501,7 +1501,7 @@ Status      : stable
 
 License     : MIT opensource
 
-Latest      : 2018-04-15
+Latest      : 2018-05-04
 
 Compiler    : Nim &gt;= 0.18.x dev branch
 
@@ -1658,7 +1658,7 @@ rndSample returns one rand sample from a sequence
 <dt id="getRndInt"><a name="getRndInt,int,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">getRndInt</span><span class="Other">(</span><span class="Identifier">mi</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">0</span><span class="Other">;</span> <span class="Identifier">ma</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="Identifier">int</span><span class="Other">.</span><span class="Identifier">high</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">noInit</span><span class="Other">,</span> <span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
 <dd>
 <p>getRndInt</p>
-<p>returns a rand int between mi and &lt; ma so for 0 or 1 we need rand(0..2)</p>
+<p>returns a random int between mi and &lt; ma so for 0 or 1 we need rand(0..2)</p>
 
 
 </dd>
@@ -2335,7 +2335,7 @@ returns a colorpalette which can be used to iterate over</pre>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-05-01 19:53:01 UTC</small>
+        <small>Made with Nim. Generated: 2018-05-04 15:47:38 UTC</small>
       </div>
     </div>
   </div>
