--- a/cxfont.html
+++ b/cxfont.html
@@ -1270,6 +1270,8 @@ function main() {
     title="showCxFont(name: string)"><wbr />show<wbr />Cx<wbr />Font<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#dotMatrixFontTest,"
     title="dotMatrixFontTest()"><wbr />dot<wbr />Matrix<wbr />Font<wbr />Test<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#dotMatrixTyper,string,int"
+    title="dotMatrixTyper(s: string; xpos: int = 1)"><wbr />dot<wbr />Matrix<wbr />Typer<span class="attachedType" style="visibility:hidden"></span></a></li>
 
   </ul>
 </li>
@@ -1506,8 +1508,8 @@ printNimcx<blockquote><p>experiments in block font building , default is center 
                          <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">WriteIOEffect</span><span class="Other">,</span> <span class="Identifier">RootEffect</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
 <dd>
 <p>dotMatrixFontTest</p>
-<p>The current way to use fonts bracketmatrix and dotmatrix</p>
-<p>is to run</p>
+<p>The current way to use fonts bracketmatrix and swamp</p>
+<p>is to run similar as below for dotmatrix you can now use dotmatrixtyper</p>
 <pre class="listing"><span class="Keyword">import</span> <span class="Identifier">nimcx</span>
 <span class="Identifier">showCxFont</span><span class="Punctuation">(</span><span class="StringLit">&quot;dotmatrix&quot;</span><span class="Punctuation">)</span>   <span class="Comment"># or &quot;bracketmatrix&quot;</span></pre><p>note the numbers next to the required characters</p>
 <p>and then</p>
@@ -1515,6 +1517,20 @@ printNimcx<blockquote><p>experiments in block font building , default is center 
 <span class="Comment"># lets print &lt;NIM&gt;123</span>
 <span class="Identifier">printCxFontText</span><span class="Punctuation">(</span><span class="Operator">@</span><span class="Punctuation">[</span><span class="DecNumber">12</span><span class="Punctuation">,</span><span class="DecNumber">30</span><span class="Punctuation">,</span><span class="DecNumber">25</span><span class="Punctuation">,</span><span class="DecNumber">29</span><span class="Punctuation">,</span><span class="DecNumber">14</span><span class="Punctuation">,</span><span class="DecNumber">1</span><span class="Punctuation">,</span><span class="DecNumber">2</span><span class="Punctuation">,</span><span class="DecNumber">3</span><span class="Punctuation">]</span><span class="Punctuation">,</span><span class="Identifier">xpos</span> <span class="Operator">=</span> <span class="DecNumber">2</span><span class="Punctuation">,</span><span class="Identifier">myfont</span><span class="Punctuation">)</span></pre><p>import &quot;/data5/NimStuff/NimCxDevel/cx.nim&quot;</p>
 
+
+</dd>
+<dt id="dotMatrixTyper"><a name="dotMatrixTyper,string,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">dotMatrixTyper</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1</span><span class="Other">)</span> <span class="Other pragmabegin">{.</span><div class="pragma">
+    <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">IOError</span><span class="Other">,</span> <span class="Identifier">AssertionError</span><span class="Other">,</span> <span class="Identifier">KeyError</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span>
+    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">WriteIOEffect</span><span class="Other">,</span> <span class="Identifier">RootEffect</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
+<dd>
+<p>prints the entered string in dotmatrix font</p>
+<p>no checking as to terminalwidth is done so adjust terminal width and char sizes accordingly</p>
+<p>cursor will be positioned at top right of last character</p>
+<pre class="listing"><span class="Keyword">import</span> <span class="Identifier">nimcx</span>
+<span class="Keyword">let</span> <span class="Identifier">myfont</span> <span class="Operator">=</span> <span class="Identifier">createCxFont</span><span class="Punctuation">(</span><span class="StringLit">&quot;dotmatrix&quot;</span><span class="Punctuation">)</span>
+<span class="Identifier">decho</span><span class="Punctuation">(</span><span class="DecNumber">5</span><span class="Punctuation">)</span>
+<span class="Identifier">dotmatrixtyper</span><span class="Punctuation">(</span><span class="StringLit">&quot;NIMCX - dotmatrix&quot;</span><span class="Punctuation">,</span><span class="Identifier">myfont</span><span class="Punctuation">)</span>
+<span class="Identifier">decho</span><span class="Punctuation">(</span><span class="DecNumber">8</span><span class="Punctuation">)</span></pre>
 
 </dd>
 
@@ -1727,7 +1743,7 @@ printNimcx<blockquote><p>experiments in block font building , default is center 
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-05-04 15:47:43 UTC</small>
+        <small>Made with Nim. Generated: 2018-05-06 16:50:37 UTC</small>
       </div>
     </div>
   </div>
