--- a/cxfont.html
+++ b/cxfont.html
@@ -1270,8 +1270,10 @@ function main() {
     title="showCxFont(name: string)"><wbr />show<wbr />Cx<wbr />Font<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#dotMatrixFontTest,"
     title="dotMatrixFontTest()"><wbr />dot<wbr />Matrix<wbr />Font<wbr />Test<span class="attachedType" style="visibility:hidden"></span></a></li>
-  <li><a class="reference" href="#dotMatrixTyper,string,int"
-    title="dotMatrixTyper(s: string; xpos: int = 1)"><wbr />dot<wbr />Matrix<wbr />Typer<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#dotMatrixTyper,string,int,string"
+    title="dotMatrixTyper(s: string; xpos: int = 1; color: string = randcol())"><wbr />dot<wbr />Matrix<wbr />Typer<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#bracketMatrixTyper,string,int,string"
+    title="bracketMatrixTyper(s: string; xpos: int = 1; color: string = randcol())"><wbr />bracket<wbr />Matrix<wbr />Typer<span class="attachedType" style="visibility:hidden"></span></a></li>
 
   </ul>
 </li>
@@ -1519,7 +1521,7 @@ printNimcx<blockquote><p>experiments in block font building , default is center 
 
 
 </dd>
-<dt id="dotMatrixTyper"><a name="dotMatrixTyper,string,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">dotMatrixTyper</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1</span><span class="Other">)</span> <span class="Other pragmabegin">{.</span><div class="pragma">
+<dt id="dotMatrixTyper"><a name="dotMatrixTyper,string,int,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">dotMatrixTyper</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1</span><span class="Other">;</span> <span class="Identifier">color</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">randcol</span><span class="Other">(</span><span class="Other">)</span><span class="Other">)</span> <span class="Other pragmabegin">{.</span><div class="pragma">
     <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">IOError</span><span class="Other">,</span> <span class="Identifier">AssertionError</span><span class="Other">,</span> <span class="Identifier">KeyError</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span>
     <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">WriteIOEffect</span><span class="Other">,</span> <span class="Identifier">RootEffect</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
 <dd>
@@ -1527,10 +1529,23 @@ printNimcx<blockquote><p>experiments in block font building , default is center 
 <p>no checking as to terminalwidth is done so adjust terminal width and char sizes accordingly</p>
 <p>cursor will be positioned at top right of last character</p>
 <pre class="listing"><span class="Keyword">import</span> <span class="Identifier">nimcx</span>
-<span class="Keyword">let</span> <span class="Identifier">myfont</span> <span class="Operator">=</span> <span class="Identifier">createCxFont</span><span class="Punctuation">(</span><span class="StringLit">&quot;dotmatrix&quot;</span><span class="Punctuation">)</span>
 <span class="Identifier">decho</span><span class="Punctuation">(</span><span class="DecNumber">5</span><span class="Punctuation">)</span>
-<span class="Identifier">dotmatrixtyper</span><span class="Punctuation">(</span><span class="StringLit">&quot;NIMCX - dotmatrix&quot;</span><span class="Punctuation">,</span><span class="Identifier">myfont</span><span class="Punctuation">)</span>
+<span class="Identifier">dotmatrixtyper</span><span class="Punctuation">(</span><span class="StringLit">&quot;NIMCX - dotmatrix&quot;</span><span class="Punctuation">)</span>
 <span class="Identifier">decho</span><span class="Punctuation">(</span><span class="DecNumber">8</span><span class="Punctuation">)</span></pre>
+
+</dd>
+<dt id="bracketMatrixTyper"><a name="bracketMatrixTyper,string,int,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">bracketMatrixTyper</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1</span><span class="Other">;</span> <span class="Identifier">color</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">randcol</span><span class="Other">(</span><span class="Other">)</span><span class="Other">)</span> <span class="Other pragmabegin">{.</span><div class="pragma">
+    <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">IOError</span><span class="Other">,</span> <span class="Identifier">AssertionError</span><span class="Other">,</span> <span class="Identifier">KeyError</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span>
+    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">WriteIOEffect</span><span class="Other">,</span> <span class="Identifier">RootEffect</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
+<dd>
+<p>prints the entered string in bracketmatrix font</p>
+<p>no checking as to terminalwidth is done so adjust terminal width and char sizes accordingly</p>
+<p>cursor will be positioned at top right of last character</p>
+<pre class="listing"><span class="Keyword">import</span> <span class="Identifier">nimcx</span>
+<span class="Identifier">decho</span><span class="Punctuation">(</span><span class="DecNumber">5</span><span class="Punctuation">)</span>
+<span class="Identifier">dotmatrixtyper</span><span class="Punctuation">(</span><span class="StringLit">&quot;NIMCX - &quot;</span><span class="Punctuation">)</span>
+<span class="Identifier">decho</span><span class="Punctuation">(</span><span class="DecNumber">8</span><span class="Punctuation">)</span>
+<span class="Identifier">bracketmatrixTyper</span><span class="Punctuation">(</span><span class="StringLit">&quot;bracketmatrix&quot;</span><span class="Punctuation">)</span></pre>
 
 </dd>
 
@@ -1743,7 +1758,7 @@ printNimcx<blockquote><p>experiments in block font building , default is center 
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-05-06 16:50:37 UTC</small>
+        <small>Made with Nim. Generated: 2018-05-07 07:36:05 UTC</small>
       </div>
     </div>
   </div>
