--- a/cxconsts.html
+++ b/cxconsts.html
@@ -1990,6 +1990,12 @@ function main() {
     title="chide = &quot;\e[?25l&quot;"><wbr />chide<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#cshow"
     title="cshow = &quot;\e[?25h&quot;"><wbr />cshow<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#euro"
+    title="euro = &quot;€&quot;"><wbr />euro<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#dollar"
+    title="dollar = &quot;$&quot;"><wbr />dollar<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#yen"
+    title="yen = &quot;¥&quot;"><wbr />yen<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#termred"
     title="termred = &quot;\e[31m&quot;"><wbr />termred<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#termgreen"
@@ -5336,6 +5342,21 @@ reset colors
 
 </dd>
 <dt id="cshow"><a name="cshow"></a><pre><span class="Identifier">cshow</span> <span class="Other">=</span> <span class="StringLit">&quot;\e[?25h&quot;</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="euro"><a name="euro"></a><pre><span class="Identifier">euro</span> <span class="Other">=</span> <span class="StringLit">&quot;€&quot;</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="dollar"><a name="dollar"></a><pre><span class="Identifier">dollar</span> <span class="Other">=</span> <span class="StringLit">&quot;$&quot;</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="yen"><a name="yen"></a><pre><span class="Identifier">yen</span> <span class="Other">=</span> <span class="StringLit">&quot;¥&quot;</span></pre></dt>
 <dd>
 
 
@@ -8694,7 +8715,7 @@ __  #
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-05-15 20:41:03 UTC</small>
+        <small>Made with Nim. Generated: 2018-05-20 18:00:29 UTC</small>
       </div>
     </div>
   </div>
