--- a/cxfont.html
+++ b/cxfont.html
@@ -1510,14 +1510,16 @@ printNimcx<blockquote><p>experiments in block font building , default is center 
                          <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">WriteIOEffect</span><span class="Other">,</span> <span class="Identifier">RootEffect</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
 <dd>
 <p>dotMatrixFontTest</p>
-<p>The current way to use fonts bracketmatrix and swamp</p>
-<p>is to run similar as below for dotmatrix you can now use dotmatrixtyper</p>
+<p>The current way to use fonts swamp</p>
+<p>is to run similar as below .</p>
+<p>for dotmatrix     use dotMatrixTyper</p>
+<p>for bracketmatrix use bracketMatrixTyper</p>
 <pre class="listing"><span class="Keyword">import</span> <span class="Identifier">nimcx</span>
 <span class="Identifier">showCxFont</span><span class="Punctuation">(</span><span class="StringLit">&quot;dotmatrix&quot;</span><span class="Punctuation">)</span>   <span class="Comment"># or &quot;bracketmatrix&quot;</span></pre><p>note the numbers next to the required characters</p>
 <p>and then</p>
 <pre class="listing"><span class="Keyword">let</span> <span class="Identifier">myfont</span> <span class="Operator">=</span> <span class="Identifier">createCxFont</span><span class="Punctuation">(</span><span class="StringLit">&quot;dotmatrix&quot;</span><span class="Punctuation">)</span>
 <span class="Comment"># lets print &lt;NIM&gt;123</span>
-<span class="Identifier">printCxFontText</span><span class="Punctuation">(</span><span class="Operator">@</span><span class="Punctuation">[</span><span class="DecNumber">12</span><span class="Punctuation">,</span><span class="DecNumber">30</span><span class="Punctuation">,</span><span class="DecNumber">25</span><span class="Punctuation">,</span><span class="DecNumber">29</span><span class="Punctuation">,</span><span class="DecNumber">14</span><span class="Punctuation">,</span><span class="DecNumber">1</span><span class="Punctuation">,</span><span class="DecNumber">2</span><span class="Punctuation">,</span><span class="DecNumber">3</span><span class="Punctuation">]</span><span class="Punctuation">,</span><span class="Identifier">xpos</span> <span class="Operator">=</span> <span class="DecNumber">2</span><span class="Punctuation">,</span><span class="Identifier">myfont</span><span class="Punctuation">)</span></pre><p>import &quot;/data5/NimStuff/NimCxDevel/cx.nim&quot;</p>
+<span class="Identifier">printCxFontText</span><span class="Punctuation">(</span><span class="Operator">@</span><span class="Punctuation">[</span><span class="DecNumber">12</span><span class="Punctuation">,</span><span class="DecNumber">30</span><span class="Punctuation">,</span><span class="DecNumber">25</span><span class="Punctuation">,</span><span class="DecNumber">29</span><span class="Punctuation">,</span><span class="DecNumber">14</span><span class="Punctuation">,</span><span class="DecNumber">1</span><span class="Punctuation">,</span><span class="DecNumber">2</span><span class="Punctuation">,</span><span class="DecNumber">3</span><span class="Punctuation">]</span><span class="Punctuation">,</span><span class="Identifier">xpos</span> <span class="Operator">=</span> <span class="DecNumber">2</span><span class="Punctuation">,</span><span class="Identifier">myfont</span><span class="Punctuation">)</span></pre><p>Alternatively compile cxmatrixfontE1.nim which calls this function </p>
 
 
 </dd>
@@ -1528,10 +1530,13 @@ printNimcx<blockquote><p>experiments in block font building , default is center 
 <p>prints the entered string in dotmatrix font</p>
 <p>no checking as to terminalwidth is done so adjust terminal width and char sizes accordingly</p>
 <p>cursor will be positioned at top right of last character</p>
-<pre class="listing"><span class="Keyword">import</span> <span class="Identifier">nimcx</span>
+<pre class="listing"><span class="Comment"># example for dotMatrixTyper and bracketMatrixTyper</span>
+<span class="Keyword">import</span> <span class="Identifier">nimcx</span>
 <span class="Identifier">decho</span><span class="Punctuation">(</span><span class="DecNumber">5</span><span class="Punctuation">)</span>
-<span class="Identifier">dotmatrixtyper</span><span class="Punctuation">(</span><span class="StringLit">&quot;NIMCX - dotmatrix&quot;</span><span class="Punctuation">)</span>
-<span class="Identifier">decho</span><span class="Punctuation">(</span><span class="DecNumber">8</span><span class="Punctuation">)</span></pre>
+<span class="Identifier">dotMatrixTyper</span><span class="Punctuation">(</span><span class="StringLit">&quot;NIMCX - &quot;</span><span class="Punctuation">)</span>
+<span class="Identifier">decho</span><span class="Punctuation">(</span><span class="DecNumber">8</span><span class="Punctuation">)</span>
+<span class="Identifier">bracketMatrixTyper</span><span class="Punctuation">(</span><span class="StringLit">&quot;bracketmatrix&quot;</span><span class="Punctuation">)</span>
+<span class="Identifier">decho</span><span class="Punctuation">(</span><span class="DecNumber">12</span><span class="Punctuation">)</span></pre>
 
 </dd>
 <dt id="bracketMatrixTyper"><a name="bracketMatrixTyper,string,int,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">bracketMatrixTyper</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1</span><span class="Other">;</span> <span class="Identifier">color</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">randcol</span><span class="Other">(</span><span class="Other">)</span><span class="Other">)</span> <span class="Other pragmabegin">{.</span><div class="pragma">
@@ -1540,12 +1545,8 @@ printNimcx<blockquote><p>experiments in block font building , default is center 
 <dd>
 <p>prints the entered string in bracketmatrix font</p>
 <p>no checking as to terminalwidth is done so adjust terminal width and char sizes accordingly</p>
-<p>cursor will be positioned at top right of last character</p>
-<pre class="listing"><span class="Keyword">import</span> <span class="Identifier">nimcx</span>
-<span class="Identifier">decho</span><span class="Punctuation">(</span><span class="DecNumber">5</span><span class="Punctuation">)</span>
-<span class="Identifier">dotmatrixtyper</span><span class="Punctuation">(</span><span class="StringLit">&quot;NIMCX - &quot;</span><span class="Punctuation">)</span>
-<span class="Identifier">decho</span><span class="Punctuation">(</span><span class="DecNumber">8</span><span class="Punctuation">)</span>
-<span class="Identifier">bracketmatrixTyper</span><span class="Punctuation">(</span><span class="StringLit">&quot;bracketmatrix&quot;</span><span class="Punctuation">)</span></pre>
+<p>cursor will be positioned at top right of last character </p>
+
 
 </dd>
 
@@ -1758,7 +1759,7 @@ printNimcx<blockquote><p>experiments in block font building , default is center 
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-05-15 20:41:08 UTC</small>
+        <small>Made with Nim. Generated: 2018-05-20 18:00:35 UTC</small>
       </div>
     </div>
   </div>
